--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiohttp-cors==0.7.0
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+appdirs==1.4.4
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==24.2.0
@@ -20,7 +21,6 @@ click==8.1.7
 cloudpickle==3.0.0
 colorful==0.5.6
 comm==0.2.2
-datasets==2.21.0
 dataclasses-json==0.6.7
 datasets==2.21.0
 debugpy==1.8.5
@@ -31,6 +31,8 @@ diskcache==5.6.3
 distlib==0.3.8
 distro==1.9.0
 docopt==0.6.2
+environs==9.5.0
+et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.1.0
 faiss-gpu==1.7.2
@@ -71,7 +73,9 @@ jupyterlab_widgets==3.0.13
 langchain==0.2.16
 langchain-community==0.2.16
 langchain-core==0.2.38
-langchain-huggingface==0.0.3
+langchain-milvus==0.1.4
+langchain-ollama==0.1.3
+langchain-openai==0.1.23
 langchain-text-splitters==0.2.4
 langsmith==0.1.114
 lark==1.2.2
@@ -88,6 +92,7 @@ matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.1
 mdurl==0.1.2
 memray==1.13.4
+milvus-lite==2.4.10
 mistune==3.0.2
 mpmath==1.3.0
 msgpack==1.0.8
@@ -115,9 +120,11 @@ nvidia-ml-py==12.560.30
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.4.99
 nvidia-nvtx-cu12==12.1.105
+ollama==0.3.3
 openai==1.43.0
 opencensus==0.11.4
 opencensus-context==0.1.3
+openpyxl==3.1.5
 orjson==3.10.7
 outlines==0.0.46
 packaging==24.1
@@ -150,12 +157,15 @@ pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+pymilvus==2.4.6
 pyproject_hooks==1.1.0
+pysbd==0.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.2.0
+ragas==0.1.16
 ray==2.35.0
 referencing==0.35.1
 regex==2024.7.24
@@ -163,9 +173,7 @@ requests==2.32.3
 rich==13.8.0
 rpds-py==0.20.0
 rsa==4.9
-s3fs==0.5.0
 safetensors==0.4.4
-scikit-build-core==0.10.5
 scikit-learn==1.5.1
 scipy==1.14.1
 sentence-transformers==3.0.1
@@ -199,6 +207,7 @@ typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 uc-micro-py==1.0.3
+ujson==5.10.0
 urllib3==2.2.2
 uvicorn==0.30.6
 uvloop==0.20.0
