--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,321 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiohttp-cors==0.7.0
+absl-py==1.4.0
+aiobotocore==2.1.2
+aiohttp==3.8.5
+aiohttp-retry==2.8.3
+aioitertools==0.11.0
 aiosignal==1.3.1
+alabaster==0.7.13
+albumentations==1.2.1
+altair==4.2.2
+amqp==5.1.1
 annotated-types==0.7.0
-anyio==4.4.0
+antlr4-python3-runtime==4.9.3
+anyio==3.7.1
 appdirs==1.4.4
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==24.2.0
-audioread==3.0.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+array-record==0.4.0
+arviz==0.15.1
+astropy==5.2.2
+astunparse==1.6.3
+async-timeout==4.0.2
+asyncssh==2.13.2
+atpublic==4.0
+attrs==23.1.0
+audioread==3.0.0
+autograd==1.6.2
+Babel==2.12.1
 backcall==0.2.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-build==1.2.1
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpickle==3.0.0
-colorful==0.5.6
+bcrypt==4.0.1
+beautifulsoup4==4.11.2
+billiard==4.1.0
+bleach==6.0.0
+blinker==1.4
+blis==0.7.10
+blosc2==2.0.0
+bokeh==3.1.1
+boto3==1.20.24
+botocore==1.23.24
+branca==0.6.0
+build==0.10.0
+CacheControl==0.13.1
+cachetools==5.3.1
+catalogue==2.0.9
+celery==5.3.1
+certifi==2023.7.22
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==2.0.12
+chex==0.1.7
+click==8.1.6
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+cligj==0.7.2
+cloud-ml @ file:///default/cloud_ml
+cloudpickle==2.2.1
+cmake==3.25.2
+cmdstanpy==1.1.0
+colorama==0.4.6
+colorcet==3.0.1
+colorlover==0.3.0
 comm==0.2.2
+community==1.0.0b1
+confection==0.1.0
+configobj==5.0.8
+cons==0.4.6
+contextlib2==21.6.0
+contourpy==1.1.0
+convertdate==2.4.0
+cryptography==3.4.8
+cufflinks==0.17.3
+cupy-cuda11x==11.0.0
+cvxopt==1.3.1
+cvxpy==1.3.2
+cycler==0.11.0
+cymem==2.0.7
+Cython==3.0.11
+dask==2022.12.1
 dataclasses-json==0.6.7
+datascience==0.17.6
 datasets==2.21.0
+DAWG-Python==0.7.2
+db-dtypes==1.1.1
+dbus-python==1.2.18
 debugpy==1.8.5
-decorator==5.1.1
+decorator==4.4.2
 defusedxml==0.7.1
+dictdiffer==0.9.0
 dill==0.3.8
-diskcache==5.6.3
-distlib==0.3.8
-distro==1.9.0
+diskcache==5.6.1
+distributed==2022.12.1
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+dlib==19.24.2
+dm-tree==0.1.8
 docopt==0.6.2
+docutils==0.18.1
+dopamine-rl==4.0.6
+dpath==2.1.6
+duckdb==0.8.1
+dulwich==0.21.5
+dvc==2.58.2
+dvc-data==0.51.0
+dvc-http==2.30.2
+dvc-objects==0.25.0
+dvc-render==0.5.3
+dvc-studio-client==0.13.0
+dvc-task==0.3.0
+earthengine-api==0.1.361
+easydict==1.10
+ecos==2.0.12
+editdistance==0.6.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
+entrypoints==0.4
 environs==9.5.0
+ephem==4.1.4
 et-xmlfile==1.1.0
-exceptiongroup==1.2.2
-executing==2.1.0
+etils==1.4.0
+etuples==0.3.9
+exceptiongroup==1.1.2
 faiss-gpu==1.7.2
-fastapi==0.112.2
-fastjsonschema==2.20.0
-filelock==3.13.1
-frozenlist==1.4.1
-fsspec==2024.2.0
+fastai==2.7.12
+fastapi==0.112.3
+fastcore==1.5.29
+fastdownload==0.0.7
+fastjsonschema==2.18.0
+fastprogress==1.0.3
+fastrlock==0.8.1
+filelock==3.12.2
+Fiona==1.9.4.post1
+firebase-admin==5.3.0
+Flask==2.2.5
+flatbuffers==23.5.26
+flatten-dict==0.4.2
+flax==0.7.0
+flufl.lock==8.0.2
+folium==0.14.0
+fonttools==4.41.1
+frozendict==2.3.8
+frozenlist==1.4.0
+fsspec==2023.6.0
+funcy==2.0
+future==0.18.3
+gast==0.4.0
+gcsfs==2023.6.0
+gdown==4.6.6
+gensim==4.3.1
+geographiclib==2.0
+geopandas==0.13.2
+geopy==2.3.0
 gguf==0.9.1
-google-api-core==2.19.2
-google-auth==2.34.0
-googleapis-common-protos==1.65.0
-greenlet==3.0.3
-grpcio==1.66.1
+gin-config==0.5.0
+gitdb==4.0.10
+GitPython==3.1.32
+glob2==0.7
+google==2.0.3
+google-api-core==2.11.1
+google-api-python-client==2.84.0
+google-auth==2.17.3
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+google-cloud-bigquery==3.10.0
+google-cloud-bigquery-connection==1.12.1
+google-cloud-bigquery-storage==2.22.0
+google-cloud-core==2.3.3
+google-cloud-datastore==2.15.2
+google-cloud-firestore==2.11.1
+google-cloud-functions==1.13.1
+google-cloud-language==2.9.1
+google-cloud-storage==2.8.0
+google-cloud-translate==3.11.2
+google-crc32c==1.5.0
+google-pasta==0.2.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.1
+googledrivedownloader==0.4
+grandalf==0.8
+graphviz==0.20.1
+greenlet==2.0.2
+grpc-google-iam-v1==0.12.6
+grpcio==1.56.2
+grpcio-status==1.48.2
+gspread==3.4.2
+gspread-dataframe==3.3.1
+gym==0.25.2
+gym-notices==0.0.8
 h11==0.14.0
+h5netcdf==1.2.0
+h5py==3.8.0
+holidays==0.29
+holoviews==1.15.4
+html5lib==1.1
 httpcore==1.0.5
+httpimport==1.3.1
+httplib2==0.21.0
 httptools==0.6.1
 httpx==0.27.2
 huggingface-hub==0.24.6
-idna==3.8
-importlib_metadata==8.4.0
+humanize==4.6.0
+hydra-core==1.3.2
+hyperopt==0.2.7
+idna==3.4
+imageio==2.25.1
+imageio-ffmpeg==0.4.8
+imagesize==1.4.1
+imbalanced-learn==0.10.1
+imgaug==0.4.0
+importlib-metadata==4.6.4
+importlib-resources==6.0.0
+imutils==0.5.4
+inflect==6.0.5
+iniconfig==2.0.0
+intel-openmp==2023.2.0
 interegular==0.3.3
-ipykernel==6.29.5
-ipython==8.12.3
+ipykernel==5.5.6
+ipython==7.34.0
+ipython-genutils==0.2.0
+ipython-sql==0.4.1
 ipywidgets==8.1.5
-jedi==0.19.1
-Jinja2==3.1.3
+iterative-telemetry==0.0.8
+itsdangerous==2.1.2
+jax==0.4.13
+jaxlib @ https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.4.13+cuda11.cudnn86-cp310-cp310-manylinux2014_x86_64.whl#sha256=af30095a0adf342b837a0ed9607e13177ee66f4e654c031a383aa546cd21d815
+jedi==0.19.0
+jeepney==0.7.1
+jieba==0.42.1
+Jinja2==3.1.2
 jiter==0.5.0
-joblib==1.4.2
+jmespath==0.10.0
+joblib==1.3.1
 jsonpatch==1.33
+jsonpickle==3.0.1
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
+jupyter-client==6.1.12
+jupyter-console==6.1.0
+jupyter-server==1.24.0
+jupyter_core==5.3.1
+jupyterlab-pygments==0.2.2
 jupyterlab_widgets==3.0.13
+kaggle==1.5.16
+keras==2.12.0
+keyring==23.5.0
+kiwisolver==1.4.4
+kombu==5.3.1
 langchain==0.2.16
 langchain-community==0.2.16
 langchain-core==0.2.38
+langchain-huggingface==0.0.3
 langchain-milvus==0.1.4
 langchain-ollama==0.1.3
 langchain-openai==0.1.23
 langchain-text-splitters==0.2.4
-langsmith==0.1.114
+langcodes==3.3.0
+langsmith==0.1.115
 lark==1.2.2
-lazy_loader==0.4
-librosa==0.10.2.post1
-linkify-it-py==2.0.3
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy_loader==0.3
+libclang==16.0.6
+librosa==0.10.0.post2
+lightgbm==3.3.5
+linkify-it-py==2.0.2
+lit==16.0.6
 llama_cpp_python==0.2.90
-llvmlite==0.43.0
+llvmlite==0.39.1
 lm-format-enforcer==0.10.6
+locket==1.0.0
+logical-unification==0.4.6
+LunarCalendar==0.0.9
+lxml==4.9.3
+Markdown==3.4.4
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==2.1.3
 marshmallow==3.22.0
-matplotlib-inline==0.1.7
-mdit-py-plugins==0.4.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+matplotlib-venn==0.11.9
+mdit-py-plugins==0.4.0
 mdurl==0.1.2
-memray==1.13.4
 milvus-lite==2.4.10
-mistune==3.0.2
+miniKanren==1.0.3
+missingno==0.5.2
+mistral_common==1.3.4
+mistune==0.8.4
+mizani==0.8.1
+mkl==2019.0
+ml-dtypes==0.2.0
+ml-kernel @ file:///app/ml_kernel
+mlxtend==0.22.0
+more-itertools==9.1.0
+moto==4.1.14
+moviepy==1.0.3
 mpmath==1.3.0
-msgpack==1.0.8
+msgpack==1.0.5
 msgspec==0.18.6
-multidict==6.0.5
+multidict==6.0.4
+multipledispatch==1.0.0
 multiprocess==0.70.16
+multitasking==0.0.11
+murmurhash==1.0.9
+music21==8.1.0
 mypy-extensions==1.0.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-numba==0.60.0
-numpy==1.26.3
+nanotime==0.5.2
+natsort==8.3.1
+nbclient==0.8.0
+nbconvert==6.5.4
+nbformat==5.9.1
+nest-asyncio==1.5.6
+networkx==3.1
+nibabel==4.0.2
+nltk==3.8.1
+notebook==6.4.8
+numba==0.56.4
+numexpr==2.8.4
+numpy==1.22.4
 nvidia-cublas-cu12==12.1.3.1
 nvidia-cuda-cupti-cu12==12.1.105
 nvidia-cuda-nvrtc-cu12==12.1.105
@@ -118,110 +327,266 @@ nvidia-cusolver-cu12==11.4.5.107
 nvidia-cusparse-cu12==12.1.0.106
 nvidia-ml-py==12.560.30
 nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.4.99
+nvidia-nvjitlink-cu12==12.6.68
 nvidia-nvtx-cu12==12.1.105
+oauth2client==4.1.3
+oauthlib==3.2.2
 ollama==0.3.3
+omegaconf==2.3.0
 openai==1.43.0
-opencensus==0.11.4
-opencensus-context==0.1.3
-openpyxl==3.1.5
+opencv-contrib-python==4.7.0.72
+opencv-python==4.7.0.72
+opencv-python-headless==4.8.0.74
+openpyxl==3.0.10
+opt-einsum==3.3.0
+optax==0.1.7
+orbax-checkpoint==0.3.1
 orjson==3.10.7
+osqp==0.6.2.post8
 outlines==0.0.46
 packaging==24.1
-pandas==2.2.2
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
+palettable==3.3.3
+pandas==1.5.3
+pandas-datareader==0.10.0
+pandas-gbq==0.17.9
+pandocfilters==1.5.0
+panel==1.2.1
+param==1.13.0
+paramiko==3.3.1
+parso==0.8.3
+partd==1.4.0
+partial-json-parser==0.2.1.1.post4
+pathlib==1.0.1
+pathspec==0.11.2
+pathy==0.10.2
+patsy==0.5.3
+pexpect==4.8.0
 pickleshare==0.7.5
-pillow==10.2.0
-pip-tools==7.4.1
-pipreqs==0.5.0
-platformdirs==4.2.2
-pooch==1.8.2
+Pillow==9.4.0
+pip-tools==6.13.0
+platformdirs==3.9.1
+plotly==5.13.1
+plotnine==0.10.1
+pluggy==1.2.0
+polars==0.17.3
+pooch==1.6.0
+portpicker==1.5.2
+prefetch-generator==1.0.3
+preshed==3.0.8
+prettytable==0.7.2
+proglog==0.1.10
+progressbar2==4.2.0
 prometheus-fastapi-instrumentator==7.0.0
 prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-proto-plus==1.24.0
-protobuf==5.28.0
+promise==2.3
+prompt-toolkit==3.0.39
+prophet==1.1.4
+proto-plus==1.22.3
+protobuf==3.20.3
 psutil==6.0.0
+psycopg2-binary==2.9.6
 ptyprocess==0.7.0
-pure_eval==0.2.3
 py-cpuinfo==9.0.0
-py-spy==0.3.14
+py4j==0.10.9.7
 pyairports==2.1.1
 pyarrow==17.0.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycocotools==2.0.6
 pycountry==24.6.1
-pycparser==2.22
+pycparser==2.21
+pyct==0.5.0
 pydantic==2.8.2
 pydantic_core==2.20.1
-Pygments==2.18.0
+pydata-google-auth==1.8.1
+pydot==1.4.2
+pydot-ng==2.0.0
+pydotplus==2.0.2
+PyDrive==1.3.1
+pyerfa==2.0.0.3
+pygame==2.5.0
+pygit2==1.12.2
+Pygments==2.14.0
+PyGObject==3.42.1
+pygtrie==2.5.0
+PyJWT==2.3.0
+pymc==5.1.2
+PyMeeus==0.5.12
 pymilvus==2.4.6
-pyproject_hooks==1.1.0
+pymorphy2==0.9.1
+pymorphy2-dicts-ru==2.4.417127.4579844
+pymystem3==0.2.0
+PyNaCl==1.5.0
+PyOpenGL==3.1.7
+pyparsing==3.1.0
+pyproj==3.6.0
+pyproject_hooks==1.0.0
+pyrsistent==0.19.3
 pysbd==0.3.4
-python-dateutil==2.9.0.post0
+PySocks==1.7.1
+pytensor==2.10.1
+pytest==7.2.2
+python-apt==2.4.0+ubuntu2
+python-dateutil==2.8.2
 python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.2
-pyzmq==26.2.0
+python-louvain==0.16
+python-slugify==8.0.1
+python-utils==3.7.0
+pytz==2022.7.1
+pyviz-comms==2.3.2
+PyWavelets==1.4.1
+PyYAML==6.0.1
+pyzmq==26.1.0
+qdldl==0.1.7.post0
+qudida==0.0.4
 ragas==0.1.16
+rank-bm25==0.2.2
 ray==2.35.0
 referencing==0.35.1
-regex==2024.7.24
+regex==2022.10.31
 requests==2.32.3
-rich==13.8.0
+requests-oauthlib==1.3.1
+requests-unixsocket==0.2.0
+requirements-parser==0.5.0
+responses==0.23.1
+rich==13.4.2
 rpds-py==0.20.0
+rpy2==3.4.2
 rsa==4.9
+ruamel.yaml==0.17.32
+ruamel.yaml.clib==0.2.7
+s3fs==0.5.0
+s3transfer==0.5.2
 safetensors==0.4.4
-scikit-learn==1.5.1
-scipy==1.14.1
+scikit-build==0.18.1
+scikit-image==0.19.3
+scikit-learn==1.2.2
+scikit_build_core==0.10.5
+scipy==1.10.1
+scmrepo==1.2.1
+scp==0.13.3
+scs==3.2.3
+seaborn==0.12.2
+SecretStorage==3.3.1
+Send2Trash==1.8.2
 sentence-transformers==3.0.1
 sentencepiece==0.2.0
+shapely==2.0.1
+shortuuid==1.0.11
+shtab==1.6.4
 six==1.16.0
-smart-open==7.0.4
-sniffio==1.3.1
+sklearn-pandas==2.2.0
+smart-open==6.3.0
+smmap==5.0.0
+sniffio==1.3.0
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
 soundfile==0.12.1
-soupsieve==2.6
-soxr==0.5.0.post1
-SQLAlchemy==2.0.34
-stack-data==0.6.3
+soupsieve==2.4.1
+soxr==0.3.5
+spacy==3.5.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+Sphinx==5.0.2
+sphinxcontrib-applehelp==1.0.4
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==2.0.19
+sqlparse==0.4.4
+sqltrie==0.7.0
+srsly==2.4.7
 starlette==0.38.4
-sympy==1.12
-tenacity==8.5.0
-textual==0.79.1
-threadpoolctl==3.5.0
+statsmodels==0.13.5
+stt-metrics==0.12
+sympy==1.11.1
+tables==3.8.0
+tabulate==0.9.0
+tblib==2.0.0
+tenacity==8.2.2
+tensorboard==2.12.3
+tensorboard-data-server==0.7.1
+tensorflow @ https://storage.googleapis.com/tensorflow/linux/gpu/tensorflow-2.12.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
+tensorflow-datasets==4.9.2
+tensorflow-estimator==2.12.0
+tensorflow-gcs-config==2.12.0
+tensorflow-hub==0.14.0
+tensorflow-io-gcs-filesystem==0.32.0
+tensorflow-metadata==1.13.1
+tensorflow-probability==0.20.1
+tensorstore==0.1.40
+termcolor==2.3.0
+terminado==0.17.1
+text-unidecode==1.3
+textblob==0.17.1
+tf-slim==1.1.0
+thinc==8.1.10
+threadpoolctl==3.2.0
+tifffile==2023.7.18
 tiktoken==0.7.0
-tinycss2==1.3.0
+tinycss2==1.2.1
 tokenizers==0.19.1
+toml==0.10.2
 tomli==2.0.1
+tomlkit==0.12.1
+toolz==0.12.0
 torch==2.4.0
-torchaudio==2.4.1+cu124
+torchaudio @ https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp310-cp310-linux_x86_64.whl#sha256=26692645ea061a005c57ec581a2d0425210ac6ba9f923edf11cc9b0ef3a111e9
+torchdata==0.6.1
+torchsummary==1.5.1
+torchtext==0.15.2
 torchvision==0.19.0
-tornado==6.4.1
+tornado==6.3.1
 tqdm==4.66.5
-traitlets==5.14.3
+traitlets==5.7.1
 transformers==4.44.2
 triton==3.0.0
+tweepy==4.13.0
+typer==0.9.0
+types-PyYAML==6.0.12.11
+types-setuptools==68.0.0.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-tzdata==2024.1
-uc-micro-py==1.0.3
+tzdata==2023.3
+tzlocal==5.0.1
+uc-micro-py==1.0.2
 ujson==5.10.0
-urllib3==2.2.2
+unattended-upgrades==0.1
+uritemplate==4.1.1
+urllib3==1.26.16
 uvicorn==0.30.6
 uvloop==0.20.0
-virtualenv==20.26.3
-vllm==0.5.5
+vega-datasets==0.9.0
+vine==5.0.0
+vllm==0.6.0
 vllm-flash-attn==2.6.1
+voluptuous==0.13.1
+wadllib==1.3.6
+wasabi==1.1.2
 watchfiles==0.24.0
-wcwidth==0.2.13
+wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
+websocket-client==1.6.1
 websockets==13.0.1
+Werkzeug==2.3.6
 widgetsnbextension==4.0.13
-wrapt==1.16.0
+wordcloud==1.8.2.2
+wrapt==1.14.1
+xarray==2022.12.0
+xarray-einstats==0.6.0
 xformers==0.0.27.post2
+xgboost==1.7.6
+xlrd==2.0.1
+xmltodict==0.13.0
 xxhash==3.5.0
-yarg==0.1.9
-yarl==1.9.7
-zipp==3.20.1
+xyzservices==2023.7.0
+yadisk==1.2.14
+yarl==1.9.2
+yellowbrick==1.5
+yfinance==0.2.25
+zc.lockfile==3.0.post1
+zict==3.0.0
+zipp==3.16.2
